hphp/hack/test/typecheck/constmap.php.exp
File "constmap.php", line 14, characters 14-15:
Invalid argument (Typing[4110])
  File "constmap.php", line 13, characters 20-25:
  Expected `string`
  File "collections/Map.hhi", line 58, characters 28-29:
    via this generic `Tk`
  File "collections/interfaces.hhi", line 1108, characters 22-23:
    via this generic `Tk`
  File "constmap.php", line 12, characters 30-37:
  But got `arraykey`
  File "constmap.php", line 12, characters 30-37:
  This type argument to `ConstMap` must match exactly (it is invariant)
File "constmap.php", line 15, characters 10-11:
Invalid return type (Typing[4110])
  File "constmap.php", line 13, characters 20-25:
  Expected `string`
  File "collections/Map.hhi", line 58, characters 28-29:
    via this generic `Tk`
  File "collections/interfaces.hhi", line 1108, characters 22-23:
    via this generic `Tk`
  File "constmap.php", line 13, characters 47-54:
  But got `arraykey`
  File "constmap.php", line 13, characters 47-54:
  This type argument to `ConstMap` must match exactly (it is invariant)
File "constmap.php", line 18, characters 14-15:
Invalid argument (Typing[4110])
  File "constmap.php", line 17, characters 23-28:
  Expected `string`
  File "collections/ImmMap.hhi", line 50, characters 26-27:
    via this generic `Tk`
  File "constmap.php", line 12, characters 30-37:
  But got `arraykey`
  File "constmap.php", line 12, characters 30-37:
  This type argument to `ConstMap` must match exactly (it is invariant)
File "constmap.php", line 19, characters 10-11:
Invalid return type (Typing[4110])
  File "constmap.php", line 17, characters 23-28:
  Expected `string`
  File "collections/ImmMap.hhi", line 50, characters 26-27:
    via this generic `Tk`
  File "constmap.php", line 17, characters 50-57:
  But got `arraykey`
  File "constmap.php", line 17, characters 50-57:
  This type argument to `ConstMap` must match exactly (it is invariant)
File "constmap.php", line 25, characters 23-24:
Invalid argument (Typing[4110])
  File "constmap.php", line 24, characters 39-44:
  Expected `string`
  File "collections/Map.hhi", line 58, characters 28-29:
    via this generic `Tk`
  File "collections/interfaces.hhi", line 1108, characters 22-23:
    via this generic `Tk`
  File "constmap.php", line 23, characters 39-46:
  But got `arraykey`
  File "constmap.php", line 23, characters 39-46:
  This type argument to `ConstMap` must match exactly (it is invariant)
File "constmap.php", line 26, characters 12-13:
Invalid return type (Typing[4110])
  File "constmap.php", line 24, characters 39-44:
  Expected `string`
  File "collections/Map.hhi", line 58, characters 28-29:
    via this generic `Tk`
  File "collections/interfaces.hhi", line 1108, characters 22-23:
    via this generic `Tk`
  File "constmap.php", line 24, characters 65-72:
  But got `arraykey`
  File "constmap.php", line 24, characters 65-72:
  This type argument to `ConstMap` must match exactly (it is invariant)
File "constmap.php", line 31, characters 23-24:
Invalid argument (Typing[4110])
  File "constmap.php", line 29, characters 12-17:
  Expected `string`
  File "collections/ImmMap.hhi", line 50, characters 26-27:
    via this generic `Tk`
  File "constmap.php", line 23, characters 39-46:
  But got `arraykey`
  File "constmap.php", line 23, characters 39-46:
  This type argument to `ConstMap` must match exactly (it is invariant)
File "constmap.php", line 32, characters 12-13:
Invalid return type (Typing[4110])
  File "constmap.php", line 29, characters 12-17:
  Expected `string`
  File "collections/ImmMap.hhi", line 50, characters 26-27:
    via this generic `Tk`
  File "constmap.php", line 30, characters 15-22:
  But got `arraykey`
  File "constmap.php", line 30, characters 15-22:
  This type argument to `ConstMap` must match exactly (it is invariant)
